Fix ribbon icon on mobile

--- a/src/component/gallery/gallery-card.module.scss
+++ b/src/component/gallery/gallery-card.module.scss
@@ -44,6 +44,11 @@ body {
         padding: 0.5rem 0.25rem;
         filter: drop-shadow(1px 2px 2px rgba(0, 0, 0, 0.5));
 
+        & > * {
+            position: relative;
+            z-index: 3;
+        }
+
         &:before {
             position: absolute;
             top: 0;
